# cmake-jni

./: .gitignore  .gitmodules  CMakeLists.txt
modules/: CMakeLists.txt
modules/JNI-Demo/: CMakeLists.txt  JNI-Demo.cpp
modules/module-A/: CMakeLists.txt  module-A.cpp
test/: CMakeLists.txt  module-A_test.cpp
